--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="index.html"><h1>DEV Circle</h1></a>
     <div class=search-bar>
       <span><i class="fa-solid fa-magnifying-glass"></i></span>
-      <input type="search" placeholder="search">
+      <input type="search" placeholder="search" name="search">
     </div>
     <button class="accent-btn"><i class="fa-regular fa-pen-to-square"></i> Write</button>
   </header>
